--- a/embedded-db-flyway/pom.xml
+++ b/embedded-db-flyway/pom.xml
@@ -10,6 +10,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>embedded-db-flyway</artifactId>
+    <dependencyManagement>
+        <dependencies>
+            <!-- Overrides jackson to avoid security issues -->
+            <dependency>
+                <groupId>com.fasterxml.jackson</groupId>
+                <artifactId>jackson-bom</artifactId>
+                <version>${jackson-bom.version}</version>
+                <type>pom</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
 
         <dependency>
