--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <guava.version>31.1-jre</guava.version>
         <h2.version>2.1.214</h2.version>
         <hsqldb.version>2.7.1</hsqldb.version>
+        <jackson-bom.version>2.13.4.20221013</jackson-bom.version>
         <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
         <java.version>1.8</java.version>
         <jdbi.version>2.78</jdbi.version>
