--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
             </properties>
         </profile>
         <profile>
-            <id>release</id>
+            <id>release</id>h2
             <build>
                 <plugins>
                     <plugin>
