--- a/embedded-db-plugin-jupiter-tests/pom.xml
+++ b/embedded-db-plugin-jupiter-tests/pom.xml
@@ -13,6 +13,7 @@
     <properties>
         <maven.install.skip>true</maven.install.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
+        <cyclonedx.skip>true</cyclonedx.skip>
     </properties>
 
     <dependencies>
