--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <rxjava-jdbc.version>0.7.19</rxjava-jdbc.version>
         <slf4j.version>2.0.13</slf4j.version>
-        <spring-jdbc.version>5.3.31</spring-jdbc.version>
+        <spring-jdbc.version>6.1.11</spring-jdbc.version>
         <sql2o.version>1.6.0</sql2o.version>
         <hamcrest.version>2.2</hamcrest.version>
         <cyclonedx-maven-plugin.version>2.8.0</cyclonedx-maven-plugin.version>
@@ -87,12 +87,12 @@
     </distributionManagement>
     <profiles>
         <profile>
-            <id>java17</id>
+            <id>java-11</id>
             <activation>
-                <jdk>[17,21)</jdk>
+                <jdk>(,12]</jdk>
             </activation>
             <properties>
-                <spring-jdbc.version>6.1.3</spring-jdbc.version>
+                <spring-jdbc.version>5.3.37</spring-jdbc.version>
             </properties>
         </profile>
         <profile>
