--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
             </activation>
             <properties>
                 <spring-jdbc.version>5.3.37</spring-jdbc.version>
+                <flyway.version>9.22.3</flyway.version>
             </properties>
         </profile>
         <profile>
