--- a/embedded-db-flyway/pom.xml
+++ b/embedded-db-flyway/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>embedded-db-junit-parent</artifactId>
         <groupId>org.zapodot</groupId>
-        <version>2.1.2</version>
+        <version>2.1.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
