No need to run jacoco:report directly. Add token for codegov

--- a/pom.xml
+++ b/pom.xml
@@ -409,7 +409,7 @@
                 <executions>
                     <execution>
                         <id>report</id>
-                        <phase>test</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
