--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,13 +30,12 @@ jobs:
         restore-keys: ${{ runner.os }}-m2    
     - name: Build with Maven and Java ${{ matrix.java-version }}
       run: mvn -B package  --no-transfer-progress --file pom.xml
-    - name: Generate JaCoCo report ${{ matrix.java-version }}
-      run: mvn -B jacoco:report --no-transfer-progress --file pom.xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
       with:
         flags: tests-java-${{ matrix.java-version }}
         verbose: true
+        token: ${{ secrets.CODECOV_TOKEN }}
 
   deploy:
     if: ${{ success() && github.event_name != 'pull_request' }}
