--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -31,4 +31,6 @@ jobs:
           files: |
             target/*.jar
             target/*.jar.asc
+            target/bom.json
+            target/bom.xml
             licence.txt
