--- a/embedded-db-flyway/pom.xml
+++ b/embedded-db-flyway/pom.xml
@@ -17,6 +17,7 @@
                 <groupId>com.fasterxml.jackson</groupId>
                 <artifactId>jackson-bom</artifactId>
                 <version>${jackson-bom.version}</version>
+                <scope>import</scope>
                 <type>pom</type>
             </dependency>
         </dependencies>
@@ -36,6 +37,10 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-database-hsqldb</artifactId>
             <version>${flyway.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
