--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,7 +47,7 @@ jobs:
       uses: actions/setup-java@v5
       with:
         java-version: 17
-        distribution: 'zulu'
+        distribution: 'temurin'
         server-id: sonatype-nexus-snapshots
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
