--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,7 +48,7 @@ jobs:
       with:
         java-version: 17
         distribution: 'temurin'
-        server-id: sonatype-nexus-snapshots
+        server-id: central
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
     - name: Run maven deploy
