--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           java-version: 17
           distribution: 'temurin'
-          server-id: sonatype-nexus-staging
+          server-id: central
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
           gpg-private-key: ${{ secrets.GPG_KEY }}
