--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,9 +51,13 @@ jobs:
         server-id: central
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
+        gpg-private-key: GPG_KEY
+        gpg-passphrase: GPG_KEY_PASSPHRASE
     - name: Run maven deploy
-      run: mvn -B -DskipTests=true deploy --no-transfer-progress --file pom.xml
+      run: mvn -X -B -DskipTests=true deploy --no-transfer-progress --file pom.xml
       env:
         MAVEN_USERNAME: ${{ secrets.SONATYPE_USER }}
         MAVEN_PASSWORD: ${{ secrets.SONATYPE_PWD }}
+        GPG_KEY: ${{ secrets.GPG_KEY }}
+        GPG_KEY_PASSPHRASE: ${{ secrets.GPG_KEY_PASSPHRASE }}
 
