--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,13 +51,12 @@ jobs:
         server-id: central
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
-        gpg-private-key: GPG_KEY
+        gpg-private-key: ${{ secrets.GPG_KEY }}
         gpg-passphrase: GPG_KEY_PASSPHRASE
     - name: Run maven deploy
       run: mvn -X -B -DskipTests=true deploy --no-transfer-progress --file pom.xml
       env:
         MAVEN_USERNAME: ${{ secrets.SONATYPE_USER }}
         MAVEN_PASSWORD: ${{ secrets.SONATYPE_PWD }}
-        GPG_KEY: ${{ secrets.GPG_KEY }}
         GPG_KEY_PASSPHRASE: ${{ secrets.GPG_KEY_PASSPHRASE }}
 
