--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -52,11 +52,11 @@ jobs:
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
         gpg-private-key: ${{ secrets.GPG_KEY }}
-        gpg-passphrase: GPG_KEY_PASSPHRASE
+        gpg-passphrase: MAVEN_GPG_PASSPHRASE
     - name: Run maven deploy
       run: mvn -X -B -DskipTests=true deploy --no-transfer-progress --file pom.xml
       env:
         MAVEN_USERNAME: ${{ secrets.SONATYPE_USER }}
         MAVEN_PASSWORD: ${{ secrets.SONATYPE_PWD }}
-        GPG_KEY_PASSPHRASE: ${{ secrets.GPG_KEY_PASSPHRASE }}
+        MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_KEY_PASSPHRASE }}
 
