Snapshot publishing setup

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,6 @@
         <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
         <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
         <mockito.version>5.18.0</mockito.version>
-        <nexus-staging-maven-plugin.version>1.7.0</nexus-staging-maven-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <rxjava-jdbc.version>0.7.19</rxjava-jdbc.version>
         <slf4j.version>2.0.17</slf4j.version>
@@ -78,7 +77,7 @@
     <distributionManagement>
         <snapshotRepository>
             <id>central</id>
-            <url>https://central.sonatype.com</url>
+            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
         </snapshotRepository>
         <repository>
             <id>central</id>
@@ -152,17 +151,6 @@
                             <waitUntil>published</waitUntil>
                         </configuration>
                     </plugin>
-                    <!--plugin>
-                        <groupId>org.sonatype.plugins</groupId>
-                        <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>${nexus-staging-maven-plugin.version}</version>
-                        <extensions>true</extensions>
-                        <configuration>
-                            <serverId>sonatype-nexus-staging</serverId>
-                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                        </configuration>
-                    </plugin-->
                 </plugins>
             </build>
         </profile>
