--- a/embedded-db-junit-liquibase/pom.xml
+++ b/embedded-db-junit-liquibase/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>embedded-db-junit-liquibase</artifactId>
-
+    <name>Extension that allows for Liquibase migrations to be run in embedded databases</name>
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
