--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java-version: [ 17, 21 ]
+        java-version: [ 17, 21, 25 ]
     steps:
     - uses: actions/checkout@v5
     - name: Set up Java ${{ matrix.java-version }}
