--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,58 +5,58 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java-version: [ 17, 21, 25 ]
+        java-version: [17, 21, 25]
     steps:
-    - uses: actions/checkout@v6
-    - name: Set up Java ${{ matrix.java-version }}
-      uses: actions/setup-java@v5
-      with:
-        distribution: 'temurin'
-        java-version: ${{ matrix.java-version }}
-    - name: Cache Maven packages
-      uses: actions/cache@v5
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2    
-    - name: Build with Maven and Java ${{ matrix.java-version }}
-      run: mvn -B package  --no-transfer-progress --file pom.xml
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v5
-      with:
-        flags: tests-java-${{ matrix.java-version }}
-        verbose: true
-        token: ${{ secrets.CODECOV_TOKEN }}
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # ratchet:actions/checkout@v6
+      - name: Set up Java ${{ matrix.java-version }}
+        uses: actions/setup-java@f2beeb24e141e01a676f977032f5a29d81c9e27e # ratchet:actions/setup-java@v5
+        with:
+          distribution: 'temurin'
+          java-version: ${{ matrix.java-version }}
+      - name: Cache Maven packages
+        uses: actions/cache@9255dc7a253b0ccc959486e2bca901246202afeb # ratchet:actions/cache@v5
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Build with Maven and Java ${{ matrix.java-version }}
+        run: mvn -B package  --no-transfer-progress --file pom.xml
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # ratchet:codecov/codecov-action@v5
+        with:
+          flags: tests-java-${{ matrix.java-version }}
+          verbose: true
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   deploy:
     if: ${{ success() && github.event_name != 'pull_request' }}
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - uses: actions/checkout@v6
-    - name: Set up Java 17
-      uses: actions/setup-java@v5
-      with:
-        java-version: 17
-        distribution: 'temurin'
-        server-id: central
-        server-username: MAVEN_USERNAME
-        server-password: MAVEN_PASSWORD
-        gpg-private-key: ${{ secrets.GPG_KEY }}
-        gpg-passphrase: MAVEN_GPG_PASSPHRASE
-    - name: Run maven deploy
-      run: mvn -B -DskipTests=true deploy --no-transfer-progress --file pom.xml
-      env:
-        MAVEN_USERNAME: ${{ secrets.SONATYPE_USER }}
-        MAVEN_PASSWORD: ${{ secrets.SONATYPE_PWD }}
-        MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_KEY_PASSPHRASE }}
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # ratchet:actions/checkout@v6
+      - name: Set up Java 17
+        uses: actions/setup-java@f2beeb24e141e01a676f977032f5a29d81c9e27e # ratchet:actions/setup-java@v5
+        with:
+          java-version: 17
+          distribution: 'temurin'
+          server-id: central
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
+          gpg-private-key: ${{ secrets.GPG_KEY }}
+          gpg-passphrase: MAVEN_GPG_PASSPHRASE
+      - name: Run maven deploy
+        run: mvn -B -DskipTests=true deploy --no-transfer-progress --file pom.xml
+        env:
+          MAVEN_USERNAME: ${{ secrets.SONATYPE_USER }}
+          MAVEN_PASSWORD: ${{ secrets.SONATYPE_PWD }}
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_KEY_PASSPHRASE }}
 
